# sg3_utils

./: .gitignore  CMakeLists.txt
demo/: CMakeLists.txt  list_device.h  list_device_win32.c  main.c
include/: sg_lib.h
lib/: CMakeLists.txt  sg_cmds_basic.c  sg_cmds_basic2.c  sg_cmds_extra.c  sg_cmds_mmc.c  sg_lib.c  sg_pt_linux.c  sg_pt_win32.c
